# investments-cli

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/commands/: mod.rs
src/commands/prices/: fetch.rs  mod.rs
src/objects/: mod.rs  price.rs  resource.rs
