[package]
name = "investments-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.21", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.144", features = ["derive"] }
