[package]
name = "investments-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derive_more = "0.99.17"
dotenv = "0.15.0"
clap = { version = "3.2.21", features = ["derive"] }

chrono = "0.4.22"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11.11", features = ["json"] }

sqlx = { version = "0.6.1", default-features=false, features=["runtime-tokio-rustls","macros","postgres", "chrono"] }
tokio = { version = "1.20.1", features = ["rt","macros"] }

futures = "0.3.24"